Modify pre-commit hook to only run checks on staged changes